Fixed spacing on item_features and min and max input widths

--- a/style.css
+++ b/style.css
@@ -197,14 +197,14 @@ section#result_container div#sorting_section .icon_btn:last-of-type{
 
 main{
     display: grid;
-    grid-template-columns:1fr 3fr;
+    grid-template-columns:1fr 4fr;
     grid-gap: 20px;
     gap: 20px;
-    padding: 0 4em;
+    padding: 0 3em;
 }
 
 aside{
-    /* border: 1px solid red; */
+    border: 1px solid red;
     display: grid;
     grid-template-columns: 1fr;
     align-content: start;
@@ -235,7 +235,7 @@ aside .filter_section #price_filter_inputs input{
     padding: 10px 14px;
     border: 1px solid #dde2e4;
     border-radius: 6px;
-    
+    width: 120px;
 }
 
 aside .filter_section > div{
@@ -262,7 +262,7 @@ section#cards_list .item{
     border: 1px solid #ddd;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    
+    padding-right: 8px;
 }
 
 section#cards_list .item .item_main{
